Navigation and Spacing Issues
I fixed any minor navigation and spacing issues within the index page
and the project pages. Links are still all working and placed correctly.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,23 @@
 @charset "UTF-8";
 
+/*navigation styles*/
 
+
+header img {
+	margin-top: 40px;
+}
+
+nav li {
+	margin-top: -20px;
+}
+	
+.container {
+	/*change color of header background here*/
+	width: 80%;
+	display: inline;
+	position: fixed;
+	z-index: 1 !important;
+}
 
 nav#navigation {
     list-style: none;
@@ -14,7 +31,8 @@ nav#navigation .nav-trigger {
     right:0;
     width:38px;
     height:38px;
-    background:#212121;
+    /*background color of menu icon*/
+	background:#212121;
     overflow:hidden;
     text-indent:100%;
     white-space:nowrap;
@@ -33,9 +51,6 @@ nav#navigation ul li {
 nav#navigation ul li a {
     text-align:center;
     display:block;
-    color:#000;
-    padding:10px 0;
-    border-radius:5px;
     -webkit-transition:all .5s;
     -moz-transition:all .5s;
     transition:all .5s;
@@ -43,7 +58,14 @@ nav#navigation ul li a {
 
 
 @media only screen and (max-width : 900px) {
+
+
+header img {
+	margin-top: 10px;
+}
+
 nav#navigation {
+	margin-top: 10px;
     position:absolute;
     width:90%;
 }
@@ -57,6 +79,7 @@ nav#navigation .nav-trigger span {
     display:block;
     width:20px;
     height:2px;
+	/*background color of menu lines*/
     background:#FFF;
     top:18px;
     left:50%;
@@ -105,10 +128,12 @@ nav#navigation .nav-trigger span::after {
 
 nav#navigation .nav-trigger.open span {
     background:rgba(255,255,255,0);
+	/*black*/
 }
 
 nav#navigation .nav-trigger.open span::before,.nav-trigger.open span::after {
     background:#FFF;
+	/*changes color of x in menu icon*/
 }
 
 nav#navigation .nav-trigger.open span::before {
@@ -207,16 +232,17 @@ nav#navigation ul li {
 }
 }
 
+/*end of navigation styles*/
 
 
-/*navigation*/
+.landing-space, .project-description {
+	margin-top: 150px;
+}
 
+.project-description img {
+	padding: 10px;
+}
 
-/*img {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-}*/
 
 /*form styles*/
 input {
